--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,8 @@ body {
     background: #fff;
     /*background: linear-gradient(120deg, #0670b8, #d33a78);*/
     display: flex;
-    align-items: inline;
+    align-items: center;
+    justify-content: center;
 }
 
 .relogio {
